--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "cros": "^1.1.0",
     "express": "^5.2.1",
     "mongodb": "^6.21.0",
